# AI-Driven-Crime-Analytics-Visualization-Platform

./: .gitignore  EXPECTATIONS_VS_BUILD_PLAN.md  Makefile  README.md
backend/: pyproject.toml
backend/kavach/: __init__.py  config.py
backend/kavach/api/: audit_routes.py  data.py  datastore.py  envelope.py  evidence_routes.py  graph_routes.py  graph_store.py  main.py  mo_routes.py  routes.py  snapshot.py  ttl_cache.py  warmer.py
backend/kavach/auth/: __init__.py  demo_users.py  dependency.py  models.py  repository.py  validator.py
backend/kavach/catalyst/: __init__.py  quickml.py
backend/kavach/datagen/: __init__.py  config.py  generator.py  lookups.py  narratives.py
backend/kavach/domain/: arrest.py  case.py  classification.py  organization.py  persons.py
backend/kavach/graph/: __init__.py  metrics.py  models.py  projection.py  repository.py
backend/kavach/ingestion/: loader.py
backend/kavach/provenance/: __init__.py  audit.py  models.py  repository.py  sdk.py
backend/kavach/repositories/: arrest_repository.py  case_repository.py  classification_repository.py  dev_fixture.py  organization_repository.py  person_repository.py  persons_repository.py
backend/tests/: conftest.py  test_health.py
backend/tests/analytics/: test_anomaly.py  test_association.py  test_districts.py  test_entity.py  test_mo_extraction.py  test_mo_schema.py  test_risk.py  test_similar.py  test_trends.py
backend/tests/api/: test_audit_api.py  test_auth_api.py  test_datastore_adapter.py  test_envelope_contract.py  test_evidence_api.py  test_graph_api.py  test_identity_api.py  (+1 more)
(+154 files in other folders)
