[project]
name = "kavach"
version = "0.1.0"
description = "KAVACH AI — Karnataka Crime Intelligence & Analytical Platform (analytics runtime, Catalyst AppSail)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.8",
    "pandas>=2.2",
    "numpy>=2.0",
    "scikit-learn>=1.5",
    "networkx>=3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["kavach*"]
